# PAP_RayTracer

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp
src/environment/: camera.cpp  camera.h  ray.h  sdl.cpp  sdl.h
src/include/: environment.h  objects.h  utils.h
src/objects/: cube.cpp  cube.h  object.h  plane.h  point2D.cpp  point2D.h  quad.cpp  quad.h  sphere.cpp  sphere.h  triangle2D.cpp  triangle2D.h  triangle3D.cpp  triangle3D.h
src/utils/: color.cpp  color.h  mathTools.cpp  mathTools.h  vector2D.cpp  vector2D.h  vector3D.cpp  vector3D.h
